# quad

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  flake.nix  parall_test.py  references.md  script.py  script2.py
.github/: codecov.yml
.github/workflows/: asv.yml  benches.yml  package.yml  python.yml  tests.yml
bench_vs_rgsl/: .gitignore
bench_vs_rgsl/benches/: my_benchmark.rs
bench_vs_rgsl/criterion/Fn_lenght/1/report/: index.html
bench_vs_rgsl/criterion/Fn_lenght/2/report/: index.html
bench_vs_rgsl/criterion/Fn_lenght/3/report/: index.html
bench_vs_rgsl/criterion/Fn_lenght/4/report/: index.html
bench_vs_rgsl/criterion/Fn_lenght/5/report/: index.html
bench_vs_rgsl/criterion/Fn_lenght/My_qag/report/: index.html
bench_vs_rgsl/criterion/Fn_lenght/My_qag_par/report/: index.html
bench_vs_rgsl/criterion/Fn_lenght/Rgsl_qag/report/: index.html
bench_vs_rgsl/criterion/Fn_lenght/report/: index.html
bench_vs_rgsl/criterion/Key/1/report/: index.html
bench_vs_rgsl/criterion/Key/2/report/: index.html
bench_vs_rgsl/criterion/Key/3/report/: index.html
bench_vs_rgsl/criterion/Key/4/report/: index.html
bench_vs_rgsl/criterion/Key/5/report/: index.html
bench_vs_rgsl/criterion/Key/6/report/: index.html
bench_vs_rgsl/criterion/Key/My_qag/report/: index.html
bench_vs_rgsl/criterion/Key/My_qag_par/report/: index.html
bench_vs_rgsl/criterion/Key/Rgsl_qag/report/: index.html
bench_vs_rgsl/criterion/Key/report/: index.html
bench_vs_rgsl/criterion/Number_of_interval_subdivision/1/report/: index.html
bench_vs_rgsl/criterion/Number_of_interval_subdivision/1024/report/: index.html
bench_vs_rgsl/criterion/Number_of_interval_subdivision/64/report/: index.html
bench_vs_rgsl/criterion/Number_of_interval_subdivision/8/report/: index.html
bench_vs_rgsl/criterion/Number_of_interval_subdivision/My_qag/report/: index.html
bench_vs_rgsl/criterion/Number_of_interval_subdivision/My_qag_par/report/: index.html
bench_vs_rgsl/criterion/Number_of_interval_subdivision/Rgsl_qag/report/: index.html
bench_vs_rgsl/criterion/Number_of_interval_subdivision/report/: index.html
bench_vs_rgsl/criterion/Qag/0/report/: index.html
bench_vs_rgsl/criterion/Qag/1/report/: index.html
bench_vs_rgsl/criterion/Qag/2/report/: index.html
bench_vs_rgsl/criterion/Qag/3/report/: index.html
bench_vs_rgsl/criterion/Qag/4/report/: index.html
bench_vs_rgsl/criterion/Qag/5/report/: index.html
bench_vs_rgsl/criterion/Qag/6/report/: index.html
bench_vs_rgsl/criterion/Qag/My_qag/report/: index.html
bench_vs_rgsl/criterion/Qag/My_qag_par/report/: index.html
bench_vs_rgsl/criterion/Qag/report/: index.html
bench_vs_rgsl/criterion/report/: index.html
benches/: scipy.py
cache/: Cargo.toml
cache/src/: funct_vector.rs  functions.rs  integrator.rs  lib.rs  main.rs  qag_1dvec_integration_result.rs  qag_1dvec_integrator_result.rs  qag_1dvec_parall_integrator_result.rs  qag_vec4_integrator_result.rs  qag_vec8_integration_result.rs  qag_vec8_integrator_result.rs  qag_vec_integration_result_pre.rs  qag_vec_integrator_result.rs  qag_vec_integrator_result_pre.rs  qag_vec_norm_integrator_result.rs  qage.rs  qage2.rs  qage_1dvec.rs  qage_1dvec2.rs  qage_1dvec_parall.rs  qage_1dvec_parall2.rs  qage_1dvec_parall_8thread.rs  qage_4vec_simd.rs  qage_8vec_simd.rs  qage_nosort_findmax.rs  qage_vec_norm.rs  qage_vec_norm2.rs  qage_vec_norm3.rs  qage_vec_norm_parall.rs  qage_vec_nosort.rs  qage_vec_nosort_earlystop.rs  qage_vec_nosort_findmax.rs  qage_vec_nosort_findmax_iroff.rs  qagpe.rs  qagse.rs  qk.rs  qk15.rs  qk21_3vec_simd.rs  qk21_simd4.rs  qk31_simd.rs  (+26 more)
notes/: README.md  criteria.md  references.md  resources.md
python_bindings/: Cargo.toml  script.py
python_bindings/src/: funct_vector.rs  lib.rs  qag_vec_norm_integration_result.rs  qag_vec_norm_integrator_result.rs  qage_vec_norm3.rs  qage_vec_norm_parall.rs  qk61_vec_norm2.rs
quad/: Cargo.toml  README.md
quad-py/: Cargo.toml  README.md  asv.conf.json  pyproject.toml
quad-py/benches/: bench_scipy.py
quad-py/benchmarks/: benchmarks.py
quad-py/src/: lib.rs
quad-py/tests/: test_parallel.py  test_quad.py  test_scipy.py  tests_quad.py
quad/benches/: my_benchmark.rs
quad/src/: constants.rs  errors.rs  lib.rs  qag.rs  qag_integration_result.rs  qag_integrator_result.rs  qag_ndarray.rs  qag_par.rs  qk.rs  qk15.rs  qk21.rs  qk31.rs  qk41.rs  qk51.rs  qk61.rs  qk_ndarray.rs  result_state.rs  semi_infinite_function.rs
src/: constants.rs  funct_vector.rs  functions.rs  gauss_legendre.rs  integral_method.rs  integrals.rs  integrator.rs  lib.rs  main.rs  qag.rs  qag_1dvec_parall_integration_result.rs  qag_array.rs  qag_array_integration_result.rs  qag_array_integrator_result.rs  qag_integration_result.rs  qag_integrator_result.rs  qag_par.rs  qag_par_integration_result.rs  qag_par_integrator_result.rs  qag_par_iter.rs  qag_vec.rs  qag_vec4_integration_result.rs  qag_vec4_integrator_result.rs  qag_vec8_integration_result.rs  qag_vec8_integrator_result.rs  qag_vec_integration_result.rs  qag_vec_integrator_result.rs  qag_vec_norm_integration_result.rs  qag_vec_norm_integrator_result.rs  qage.rs  qage2.rs  qage_1dvec.rs  qage_1dvec2.rs  qage_1dvec_parall.rs  qage_1dvec_parall2.rs  qage_1dvec_parall3.rs  qage_1dvec_parall_2thread.rs  qage_1dvec_parall_4thread.rs  qage_4vec_simd.rs  qage_8vec_simd.rs  (+68 more)
test_vs_rgsl/: Cargo.toml  bindings.rs  build.rs  try.c  try.h  wrapper.h
test_vs_rgsl/hello/: hello.c  hello.h
test_vs_rgsl/qk/: cache.c  cache.h  qk.c  qk.h
test_vs_rgsl/src/: err.c  funct_vector.rs  gsl_inline.h  gsl_integration.h  gsl_math.h  gsl_minmax.h  gsl_nan.h  gsl_pow_int.h  gsl_precision.h  gsl_sys.h  gsl_types.h  qag_1dvec_integration_result.rs  qag_1dvec_integrator_result.rs  qag_1dvec_parall_integration_result.rs  qag_1dvec_parall_integrator_result.rs  qage2.rs  qage_1dvec2.rs  qage_1dvec_parall_8thread.rs  qk.c  qk.rs  qk21_simd.rs  qk21_simd2.rs  qk61.c  qk61.rs  qk61_blas.rs  qk61_cos.rs  qk61_simd.rs  qk61_simd2.rs  qk61_simd3.rs  qsrt2.rs  time.rs
(+397 files in other folders)
