[package]
name = "quad"
version = "0.1.0"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "Quadrature integration"

[lib]
name = "quad"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[dependencies]
rayon = "1.6"

[dev-dependencies]
GSL = "6.0.0"
bindgen = "0.65.1"
blas = "0.22.0"
cblas = "0.4.0"
cc = "1.0.79"
cty = "0.2.2"
openblas-src = "0.10.8"
