[package]
name = "quad"
version = "0.1.0"
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
edition = "2021"
license = "GPL-3.0-or-later"
readme = "README.md"
description = "Quadrature integration"

[lib]
name = "quad"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]

[dependencies]
rayon = "1.6"

[dev-dependencies]
GSL = "6.0.0"
