[package]
name = "cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.8.5"
nalgebra = "0.32.1"
threadpool = "1.8.1"
rayon = "1.6"
ndarray = "0.15.0"
simba= { version = "*", features = ["packed_simd"] }
packed_simd_2 = "0.3.5"


[profile.dev]
opt-level = 3
