[package]
name = "quadrature"
description = "Quad python bindings"
authors = [
  "Alessandro Candido <candido.ale@gmail.com>",
  "Alex Raiteri <alex.raiteri@studenti.unimi.it>",
]
readme = "../README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "quad"
crate-type = ["cdylib"]

[dependencies]
quad = { path = "../quad", version = "0.1.0" }

[dependencies.pyo3]
version = "0.15.1"
features = ["extension-module"]
