[package]
name = "quadrature"
description = "Quad python bindings"
authors = [
  "Alessandro Candido <candido.ale@gmail.com>",
  "Alex Raiteri <alex.raiteri@studenti.unimi.it>",
]
readme = "../README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
name = "quadrature"
crate-type = ["cdylib"]

[dependencies]
quad = { path = "../quad" }
ndarray = "0.15.6"

[dependencies.pyo3]
version = "0.19.1"
features = ["extension-module"]
