[build-system]
requires = ["maturin>=0.13.4"]
build-backend = "maturin"

[project]
name = "quad"
requires-python = ">=3.7"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = ["numpy>=1.23.0,<2.0.0"]

[project.urls]
homepage = ""
documentation = ""

[tool.maturin]
bindings = "pyo3"
strip = true
