[package]
name = "quad"
description = "Quadrature integration"
authors = [
  "Alessandro Candido <candido.ale@gmail.com>",
  "Alex Raiteri <alex.raiteri@studenti.unimi.it>",
]
readme = "../README.md"

categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
rayon = "1.6"

[dev-dependencies]
GSL = "6.0.0"
bindgen = "0.65.1"
blas = "0.22.0"
cblas = "0.4.0"
cc = "1.0.79"
cty = "0.2.2"
openblas-src = "0.10.8"
