[package]
name = "test_vs_rgsl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
GSL = "6.0.0"
cblas = "0.4.0"
rayon = "1.6"
blas = "0.20"
openblas-src = "0.9"
cty = "0.2.2"
cc = "1.0"
bindgen = "0.53.1"

[build-dependencies]
cc = "1.0"
bindgen = "0.53.1"

[profile.dev]
opt-level = 3